# llm-evaluator

./: .gitignore  README.md  logger.py  main.py  pyproject.toml  requirements.txt
benchmarks/math-500/evaluation_results/: detailed_results_HuggingFaceH4_MATH-500_20241203_121129.json  evaluation_history.json  summary_results_HuggingFaceH4_MATH-500_20241203_121129.json
llm_evaluator/: __init__.py  config.py  evaluator.py  logger.py  metrics.py  metrics_config.py  processor.py  result_logger.py
